logs/coffin-garetjax.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Coffin_GaretJax-0.3.8.dev0.egg-info'...
Listing './lib/python3.5/site-packages/coffin'...
Listing './lib/python3.5/site-packages/coffin/contrib'...
Listing './lib/python3.5/site-packages/coffin/contrib/auth'...
Compiling './lib/python3.5/site-packages/coffin/contrib/auth/urls.py'...
***   File "./lib/python3.5/site-packages/coffin/contrib/auth/urls.py", line 5
    exec inspect.getsource(urlpatterns)\
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coffin/contrib/auth/views.py'...
***   File "./lib/python3.5/site-packages/coffin/contrib/auth/views.py", line 8
    exec inspect.getsource(views).replace('from django.shortcuts import render_to_response', 'from coffin.shortcuts import render_to_response')
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coffin/contrib/flatpages'...
Compiling './lib/python3.5/site-packages/coffin/contrib/flatpages/middleware.py'...
***   File "./lib/python3.5/site-packages/coffin/contrib/flatpages/middleware.py", line 6
    exec inspect.getsource(FlatpageFallbackMiddleware)\
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coffin/contrib/syndication'...
Listing './lib/python3.5/site-packages/coffin/management'...
Listing './lib/python3.5/site-packages/coffin/management/commands'...
Listing './lib/python3.5/site-packages/coffin/shortcuts'...
Listing './lib/python3.5/site-packages/coffin/template'...
Listing './lib/python3.5/site-packages/coffin/views'...
Listing './lib/python3.5/site-packages/coffin/views/generic'...
Compiling './lib/python3.5/site-packages/coffin/views/generic/simple.py'...
***   File "./lib/python3.5/site-packages/coffin/views/generic/simple.py", line 6
    exec inspect.getsource(direct_to_template)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_defaultags.py'...
***   File "./lib/python3.5/site-packages/tests/test_defaultags.py", line 73
    print template, '==', expected_result
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_defaultfilters.py'...
***   File "./lib/python3.5/site-packages/tests/test_defaultfilters.py", line 75
    assert r('a{{ d|date("Y") }}b', {'d': date(2007, 01, 01)}) == 'a2007b'
                                                      ^
SyntaxError: invalid token

Listing './share'...
Listing './share/python-wheels'...
